Code Files/force-app/main/default/objects/Event__c/fields/Client__c.field-meta.xml
<CustomField><fullName>Client__c</fullName><label>Client</label><type>Lookup</type><deleteConstraint>SetNull</deleteConstraint><referenceTo>Client__c</referenceTo><relationshipLabel>Events</relationshipLabel><relationshipName>Events</relationshipName></CustomField>