Code Files/force-app/main/default/objects/Event__c/fields/Event_Budget__c.field-meta.xml
<CustomField><fullName>Event_Budget__c</fullName><label>Event Budget</label><type>Currency</type><formula>CASE(TEXT(Event_Type__c), "Wedding", 50000, "Corporate", 30000, "Birthday", 10000, "Anniversary", 20000, "Festival", 60000, "Concert", 40000, "Other", 15000, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><precision>18</precision><scale>2</scale></CustomField>