Code Files/force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField><fullName>Event_Status__c</fullName><label>Event Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Planned</fullName><default>false</default><label>Planned</label></value><value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Pending Cancellation</fullName><default>false</default><label>Pending Cancellation</label></value><value><fullName>Canceled</fullName><default>false</default><label>Canceled</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value></valueSetDefinition></valueSet></CustomField>