Code Files/force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField><fullName>Venue__c</fullName><label>Venue</label><type>Lookup</type><deleteConstraint>SetNull</deleteConstraint><referenceTo>Venue__c</referenceTo><relationshipLabel>Events</relationshipLabel><relationshipName>Events</relationshipName></CustomField>